[metadata]
name = audio_preprocess
description = Audio Preprocessing library for Synthesis Speech detection system
long_description_content_type = text/markdown
url = https://github.com/josebeo2016/audio_preprocess
project_urls =
    Bug Tracker = https://github.com/josebeo2016/audio_preprocess/issues
    Changelog = https://github.com/josebeo2016/audio_preprocess/releases
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    = audio_preprocess
packages = find:
python_requires = >=3.8

[options.packages.find]
where = audio_preprocess

